--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     testImplementation (
+            'com.github.javafaker:javafaker:1.0.2',
             'org.junit.jupiter:junit-jupiter:5.9.1',
             'com.codeborne:selenide:6.9.0'
     )
