--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,11 @@ dependencies {
     testImplementation (
             'com.github.javafaker:javafaker:1.0.2',
             'org.junit.jupiter:junit-jupiter:5.9.1',
-            'com.codeborne:selenide:6.10.1'
+            'com.codeborne:selenide:6.10.1',
+            'org.assertj:assertj-core:3.23.1',
+            'com.codeborne:pdf-test:1.5.0',
+            'com.codeborne:xls-test:1.4.3',
+            'com.opencsv:opencsv:5.7.1'
     )
 }
 
