--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
             'org.assertj:assertj-core:3.23.1',
             'com.codeborne:pdf-test:1.5.0',
             'com.codeborne:xls-test:1.4.3',
-            'com.opencsv:opencsv:5.7.1'
+            'com.opencsv:opencsv:5.7.1',
+            'com.fasterxml.jackson.core:jackson-databind:2.14.1',
+            'com.google.code.gson:gson:2.10'
     )
 }
 
