--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
@@ -10,24 +11,56 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+allure {
+    report {
+        version.set("2.20.1")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.20.1")
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
+            //test data generator
             'com.github.javafaker:javafaker:1.0.2',
+
             'org.junit.jupiter:junit-jupiter:5.9.1',
             'com.codeborne:selenide:6.10.1',
+            //asserts
             'org.assertj:assertj-core:3.23.1',
+            //pdf,xls,csv parsers
             'com.codeborne:pdf-test:1.5.0',
             'com.codeborne:xls-test:1.4.3',
             'com.opencsv:opencsv:5.7.1',
+
+            //json parsers
             'com.fasterxml.jackson.core:jackson-databind:2.14.1',
-            'com.google.code.gson:gson:2.10'
+            'com.google.code.gson:gson:2.10',
+
+            //logging
+            'org.slf4j:slf4j-simple:2.0.5',
+
+            //allure
+            'io.qameta.allure:allure-selenide:2.20.1'
     )
 }
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
-}
 
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
 help {
     doFirst {
         println "**********************"
